layout issues fixed

--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,8 @@ span:hover{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: right;
+  display: none;
 }
 
 #weather-info{
@@ -36,12 +34,15 @@ span:hover{
   height: 400px;
   background-color: rgba(255, 255, 255, 0.753);
   margin: 50px auto;
-  
+}
 
+#info{
+  text-align: center;
+  margin-top: -40px;
 }
 
 #close-weather{
-  margin: 5px;
+  margin: 5px 5px 0px 0px;
   border: none;
   background-color: rgba(0, 0, 0, 0);
   color: rgb(0, 0, 0);
